style: images remove from the project files and replace with http link

--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -153,28 +153,28 @@
   }
 
   &__mat-card01 {
-    background-image: url("/../assets/images/chefs2.png");
+    background-image: url("https://firebasestorage.googleapis.com/v0/b/foodie-25b73.appspot.com/o/home%20page%2Fcard%2Fchefs2.png?alt=media&token=bd011cbd-6d0a-4a66-9ae1-9b57bfd84a14");
     background-size: cover;
     border-radius: 10px;
     height: 480px;
   }
 
   &__mat-card02 {
-    background-image: url("/../assets/images/delivery-girl4.png");
+    background-image: url("https://firebasestorage.googleapis.com/v0/b/foodie-25b73.appspot.com/o/home%20page%2Fcard%2Fdelivery-girl4.png?alt=media&token=d7447dea-69ef-4000-95e1-3c3ad3e2816f");
     background-size: cover;
     border-radius: 10px;
     height: 480px;
   }
 
   &__mat-card03 {
-    background-image: url("/../assets/images/food-table3.png");
+    background-image: url("https://firebasestorage.googleapis.com/v0/b/foodie-25b73.appspot.com/o/home%20page%2Fcard%2Ffood-table3.png?alt=media&token=ec3ceaa2-a3f0-4fde-acb5-fa2276d9c45e");
     background-size: cover;
     border-radius: 10px;
     height: 480px;
   }
 
   &__mat-card04 {
-    background-image: url("/../assets/images/gift-voucher.png");
+    background-image: url("https://firebasestorage.googleapis.com/v0/b/foodie-25b73.appspot.com/o/home%20page%2Fcard%2Fgift-voucher.png?alt=media&token=c81c9a6c-ca79-4b24-b6c3-0001ffa16208");
     background-size: cover;
     border-radius: 10px;
     height: 480px;
