style: login page facebook button padding fixed

--- a/src/app/feature/auth/pages/login-page/login-page.component.scss
+++ b/src/app/feature/auth/pages/login-page/login-page.component.scss
@@ -23,6 +23,8 @@
       color: aliceblue;
       font-weight: 600;
       height: 48px;
+      margin-top: 14px;
+      margin-bottom: 14px;
     }
 
     &--white {
